@@ -3,6 +3,7 @@
   - fix: Pascal sound support
   - support for SDL2 with automatic resising of the graphics
   - SDL2: support for pasting text from clipboard (Alt+V, middle mouse button)
+  - audio: try to use memory mapping for WAV or AU files with LPCM <= 16 Bit
 
 * AKFAvatar 0.24.2
 
